--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   ],
   "scripts": {
     "dev": "webpack-dev-server --mode development  --open --watch",
-    "build": "webpack   --mode production"
+    "build": "webpack --mode production"
   },
   "author": "",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "jquery": "^3.3.1",
     "snapsvg": "^0.5.1"
   },
   "devDependencies": {
@@ -33,12 +32,13 @@
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "postcss-preset-env": "^5.1.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "svg-inline-loader": "^0.8.0",
     "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
