--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "venues-weather-app",
   "version": "1.0.0",
-  "description": "",
+  "homepage": "https://andiva-mira.github.io/venues-weather-app",
+  "description": "Local attractions and weather app",
   "main": "App.js",
   "browserslist": [
     "last 2 versions",
@@ -18,6 +19,7 @@
   "author": "",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "gh-pages": "^1.2.0",
     "snapsvg": "^0.5.1"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "favicons-webpack-plugin": "0.0.9",
-    "gh-pages": "^1.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
