--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
@@ -40,8 +41,6 @@
     "postcss-preset-env": "^5.1.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "svg-inline-loader": "^0.8.0",
-    "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.10.0",
